# clup

./: .gitignore  Cargo.toml  Makefile  README.md
pkg/DEBIAN/: control
src/: app.rs  config.rs  main.rs  system.rs  ui.rs
src/components/: cluster.rs  logs.rs  mod.rs  overview.rs
src/patroni/: mod.rs  patroni.rs
src/services/: actions.rs  cluster.rs  logs.rs  mod.rs  overview.rs
src/ui/: layout.rs  mod.rs  render.rs
