[package]
name = "clu"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
hostname = "0.4"
ureq = { version = "2.12", features = ["json"] }
