[package]
name = "clup"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
hostname = "0.4"
ureq = { version = "2.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }

#[build]
#target = "aarch64-unknown-linux-gnu"
#
#[target.aarch64-unknown-linux-gnu]
#linker = "aarch64-linux-gnu-gcc"
#ar = "aarch64-linux-gnu-ar"
